--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+models/*.pkl filter=lfs diff=lfs merge=lfs -text
 /Procfile filter=lfs diff=lfs merge=lfs -text
 *.pyc filter=lfs diff=lfs merge=lfs -text
 *.py filter=lfs diff=lfs merge=lfs -text
