--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@
 *.css filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
 *.html filter=lfs diff=lfs merge=lfs -text
+*.html linguistic-detectable=false
